prevent covers from overlaping menu

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -343,7 +343,7 @@ body {
 
   .status-menu-container {
     width: 100%;
-    z-index: 2;
+    z-index: 3;
     background-color: $status-background;
     border: 0;
     height: $status-menu-height;
